# LanderSim

./: .gitignore  CMakeLists.txt  Makefile  Makefile____old  README.md  VulkanTest  compileshaders.sh  imgui.ini  uml1.dia  uml1.dia.autosave
resources/shaders/: default_lit_frag.spv  default_lit_vert.spv  greyscale_lit_frag.spv  greyscale_textured_lit_frag.spv  greyscale_unlit_frag.spv  shadowmap_frag_test.spv  shadowmap_vert.spv  skybox_frag.spv  skybox_vert.spv  textured_lit_frag.spv  unlit_frag.spv
resources/shaders/src/: default_lit.frag  default_lit.vert  greyscale_lit.frag  greyscale_textured_lit.frag  greyscale_unlit.frag  shadowmap.vert  shadowmap_test.frag  skybox.frag  skybox.vert  textured_lit.frag  unlit.frag
shaders/: default_lit_frag.spv  skybox_frag.spv
shaders/src/: default_lit.vert  greyscale.frag  unlit.frag
src/: CMakeLists.txt  Main.cpp  main.cpp
src/App/: application.cpp  application.h
src/Domain/: data_scene.h  dmn_iScene.h  dmn_myScene.cpp  dmn_myScene.h  myDiscreteDynamicsWorld.cpp  world_camera.cpp  world_camera.h  world_input.cpp  world_input.h  world_physics.cpp  world_physics.h  world_state.cpp  world_state.h  world_stats.h
src/Domain/Ai/: ai_lander.cpp  ai_lander.h
src/Domain/Data/: data_scene.h
src/Domain/Lander/: lander_cpu.cpp  lander_cpu.h  lander_gnc.cpp  lander_gnc.h  lander_navstruct.h  lander_vision.cpp  lander_vision.h
src/Domain/Objects/: obj.h  obj_asteroid.h  obj_collision.h  obj_collisionRender.h  obj_lander.h  obj_landingSite.h  obj_light.h  obj_pointLight.h  obj_render.h  obj_spotLight.h  obj_testPlane.h
src/Service/: filewriter.cpp  filewriter.h  mediator.cpp  mediator.h  qtimer.cpp  qtimer.h  sv_meshBuilder.cpp  sv_meshBuilder.h  sv_randoms.cpp  sv_randoms.h
src/Ui/: ui_handler.cpp  ui_handler.h  ui_input.cpp  ui_input.h
src/Vk/: vk_debug_msg.h  vk_images.cpp  vk_images.h  vk_init_queries.cpp  vk_init_queries.h  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_renderer_base.cpp  vk_renderer_base.h  vk_renderer_offscreen.cpp  vk_renderer_offscreen.h  vk_structs.cpp  vk_structs.h  vk_structures.cpp  vk_structures.h  vk_types.h  vk_windowHandler.cpp  vk_windowHandler.h
src/vulkan/: glfw_WindowHandler.cpp  glfw_WindowHandler.h  ui_handler.cpp  ui_handler.h  vk_debug_msg.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_imgui.cpp  vk_imgui.h  vk_init_queries.cpp  vk_init_queries.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_structs.cpp  vk_structs.h  vk_types.h
src/world/: world_camera.h  world_input.cpp  world_input.h  world_state.cpp  world_state.h
unit_tests/: CMakeLists.txt  test_IScene.cpp  test_init.cpp  test_lander.cpp
unused_src/: myDiscreteDynamicsWorld.h
